--- a/src/app/[lang]/[slug]/content/bucket-hat/bucket-hat.ko.mdx
+++ b/src/app/[lang]/[slug]/content/bucket-hat/bucket-hat.ko.mdx
@@ -1,93 +1,338 @@
 ---
-title: "버킷 햇 재봉 패턴 생성 웹앱"
+title: "Bucket Hat Pattern Generator"
 date: "2025-03-15"
 slug: "bucket-hat"
 ---
 
 import { ConeDevelopment } from "./ConeDevelopment";
+import { Katex } from "./Katex";
+import { Slider } from "./Slider";
+import { Lathe } from "./Lathe";
 
-## 소개
+This is a project where you can generate sewing patterns for bucket hats with input parameters such as size, shape, and seam allowance. It also features a 3D preview of the generated hat with a physics simulation.
 
-이 프로젝트는 사용자가 버킷햇의 사이즈, 형태, 시접과 같은 입력값을 설정하여 재봉 패턴을 생성할 수 있도록 합니다. 또한, 생성된 모자의 3D 미리보기와 물리 시뮬레이션 기능도 제공합니다.
-이 프로젝트의 목표는 패턴을 자르고 바느질하기 전에 최종 제품이 어떻게 보일지를 예측할 수 있도록 돕는 것입니다. 취미로 재봉을 하는 사람들에게 가장 어려운 점 중 하나는, 패턴만 보고는 완성된 모양을 상상하기 어렵다는 것입니다. 패턴의 길이와 각도를 조금만 변경해도 최종 형태에 큰 차이가 생길 수 있습니다.
+The project aims to present a better understanding of the final product before cutting and sewing. One of the main difficulties of sewing from patterns -especially as a hobbyist- is that it’s hard to have an idea of how the final product will look before completion. The illustration or image provided by the sewing pattern is all that we have. Slight changes to length and angles of the pattern can lead to significant changes to the final form.
 
-저는 개인적으로 사용할 버킷햇을 직접 만들고 선물하면서 이 프로젝트를 개발하게 되었습니다. 버킷햇은 매우 다양한 형태를 가질 수 있으며, 패턴만 봐서는 최종 모양을 예측하기가 어렵습니다. 예를 들어, 챙 패턴의 곡률은 챙이 얼마나 퍼지는지를 결정하는데, 이 각도를 직접 잘라서 조립해 보기 전까지는 시각적으로 이해하기 어렵습니다. 이처럼 3D 형태의 의류는 평면 패턴만으로는 예측하기 어려운 경우가 많기 때문에, 이를 해결하고자 이 프로젝트를 만들게 되었습니다.
+I decided to build this because I sew quite a few bucket hats for personal use and gifting. Bucket hats have a wide variety of shapes, and it is difficult to know how it will look by just looking at the pattern. For example, the curvature of the arc of the brim pattern changes how much the brim is flared from the hat. The angle formed by the curvature is hard to visualize unless you cut it up and put it together. Three-dimensional garments, such as hats, suffer a lot from this difficulty, which is why I wanted to create a tool that makes the process easier.
 
-## 대상 사용자
+<video width="500" height="300" autoPlay muted loop>
+  <source src="/bucket-hat/videos/bucket-hat-video1.mp4" type="video/mp4" />
+</video>
 
-이 도구는 처음 재봉을 시작하는 취미 재봉사들을 주요 대상으로 합니다. 특히, 무료 패턴을 찾기 어렵거나 직접 패턴을 만들기 어려운 초보자들에게 유용할 것입니다. 이 프로젝트는 다양한 크기와 형태의 버킷햇을 한 번에 생성할 수 있는 포괄적인 도구가 되는 것을 목표로 합니다.
+## Target Audience
 
-그러나 단순한 패턴 생성 도구를 넘어, 중급 및 고급 재봉사들에게도 실험적인 테스트 도구로 활용될 수 있습니다. 원하는 모양의 패턴을 정확하게 계산할 수 있을 뿐만 아니라, 원단의 무게와 강성을 시뮬레이션할 수 있어 다양한 디자인을 실험할 수 있는 가능성을 제공합니다.
+The main target audience for this tool was intended for beginner hobbyists who have a hard time finding free patterns or making their own. I intended to make a one comprehensive tool for generating all possible sizes and shapes for a basic bucket hat. Furthermore, as a tool of procedural generation, it also opens up possibilities of experimental testing for intermediate and advanced sewers. With the tool's ability to calculate exact patterns of desired shapes and simulate different fabric weight and stiffness, users can experiment digitally without using any fabric.
 
-## 기능 및 특징
+## Features & Functionality
 
-이 프로젝트는 다양한 파라미터를 설정할 수 있는 구성 패널, 3D 물리 시뮬레이션이 적용된 모자 모델, 그리고 재봉 패턴 미리보기를 제공합니다. 사용자는 머리 둘레, 머리 높이, 챙 너비, 챙 각도, 시접 등을 입력할 수 있으며, 이를 기반으로 즉시 계산된 패턴과 3D 모델이 실시간으로 생성됩니다.
+The project features a configuration panel with parameter inputs, a three-dimensional model of the hat with cloth simulation, and a preview of the sewing pattern. Users can input their measurements such as head diameter, head height, brim width, brim angle, and seam allowance. The sewing pattern and 3d model are generated with the calculations with these inputs and are updated in real time for a simultaneous interaction. The 3d model can be applied to a physics engine and simulate how the hat sits on a head with the ability to change physics parameters such as fabric stiffness, weight, and gravity. Finally, the sewing pattern can be exported to PDF with desired paper size.
 
-3D 모델은 물리 엔진을 적용하여 모자가 머리에 어떻게 착용되는지 시뮬레이션할 수 있습니다. 사용자는 원단의 강성, 무게, 중력과 같은 물리적 요소를 조정하여 모자의 착용감을 보다 정확히 예측할 수 있습니다. 마지막으로, 사용자가 원하는 용지 크기에 맞춰 패턴을 PDF로 내보낼 수도 있습니다.
+### Technologies Used
 
-### 2-1. 사용 기술
+- **Next.js** – Framework
+- **Three.js** – 3D rendering
+- **React Three Fiber** – React renderer for Three.js
+- **Cannon.js** – Physics engine
+- **jsPDF** – PDF generation
+- **svg2pdf** – SVG to PDF conversion (jsPDF plugin)
+- **D3.js** – SVG generation
+- **Firebase** – Feedback database
+- **Figma** – Design
+- **react-tooltips** – Tooltips
 
-- Next.js - 프레임워크
-- Three.js - 3D 뷰 렌더링
-- React Three Fiber - Three.js의 React 렌더러
-- Cannon.js - 물리 엔진
-- jsPDF - PDF 생성
-- svg2pdf - SVG를 PDF로 변환하는 jsPDF 플러그인
-- D3.js - SVG 패턴 생성
-- Firebase - 피드백 데이터베이스
-- Figma - 디자인 작업
-- React-tooltips - 툴팁 기능
+## Design & UX
 
-## 디자인 및 사용자 경험 (UX)
+I took inspiration from old school sewing books, line drawing aesthetics, analog dials and sliders from the mid-century modern electronics, notably Dieter Rams’ designs. The interactive UI elements are distinctly bordered and have a drop shadow to indicate interactivity. the wordmark is **EB Garamond** and heading and paragraphs are in **Inter**.
 
-![Braun TS 45 Control Unit](https://assets.fontsinuse.com/use-media/20677/upto-700xauto/56703525/1/jpeg/121217RA_braun_hi_fi_amp_005.jpeg)
+![Braun TS 45 Controller](https://assets.fontsinuse.com/use-media/20678/upto-700xauto/56703525/1/jpeg/121217RA_braun_hi_fi_amp_006.jpeg)
 
-이 프로젝트의 디자인은 오래된 재봉책, 라인 드로잉 스타일, 미드센추리 모던 전자기기의 다이얼과 슬라이더에서 영감을 받았습니다. 특히, 디터 람스(Dieter Rams)의 디자인 철학을 참고하여 UI 요소는 명확한 테두리와 그림자를 활용해 상호작용 가능성을 강조했습니다. 워드마크는 'EB Garamond'를 사용하고, 제목과 본문에는 'Inter' 폰트를 적용했습니다.
+<div className="sliderWrapper">
+  <Slider
+    min={500}
+    max={650}
+    defaultValue={550}
+    label={"Lautstarke"}
+    marks={[
+      { value: 500, label: "500" },
+      { value: 525, label: "525" },
+      { value: 550, label: "550" },
+      { value: 575, label: "575" },
+      { value: 600, label: "600" },
+      { value: 625, label: "625" },
+      { value: 650, label: "650" },
+    ]}
+    ticks={61}
+  />
+</div>
 
-데스크톱 버전에서는 전형적인 설정 패널과 미리보기 영역으로 레이아웃을 구성했습니다. 하지만 모바일에서는 화면을 나누기 어렵기 때문에, 인터랙션 영역이 너무 작아지지 않도록 3D 뷰포트를 플로팅 방식으로 전환했습니다. 이 방식은 UI 요소를 가리면서도, 사용자가 뒤에 있는 요소를 충분히 인식할 수 있도록 고려되었습니다.
+The desktop layout follows a standard configuration setup—a large view with a panel on one side. One of the main challenges in responsive design was creating a user-friendly layout for mobile devices. Since mobile screens are too small to divide into panel and view sections, a compact interactive zone could hinder usability. To address this, I implemented a floating viewport for the 3D preview once the page is scrolled down. Although the floating viewport covers part of the interactive area, users can still perceive the underlying elements through the uncovered sections.
 
-## 개발 과정
+![Mobile UI](/bucket-hat/images/bucket-hat-mobile.jpg)
 
-### 1. 핵심 기능 구현
+## Development Process Overview
 
-먼저, 머리 둘레, 높이, 챙 너비, 각도 등의 입력값을 받아 이를 기반으로 패턴을 생성하는 핵심 기능을 개발했습니다. D3.js를 사용하여 SVG로 패턴을 그렸으며, 패턴을 조정할 수 있도록 중심 정렬 및 오프셋 기능을 추가했습니다. PDF로 내보내기 위해 jsPDF를 사용하고, SVG를 PDF로 삽입하기 위해 svg2pdf 플러그인을 활용했습니다.
+I started by building the core functions—taking a few input parameters (head diameter, height, brim width, angle) and using them to calculate the variables needed to generate a sewing pattern. I used D3.js's SVG-generating functions to draw the pattern and added shape-modifying functions along the way, like offsetting shapes and centering them. For PDF generation, I used jsPDF, along with the svg2pdf plugin to insert the SVG into the document.
 
-이후, 3D 미리보기와 물리 엔진을 추가하여 프로젝트의 핵심 기능을 완성했습니다.
+After that, I moved on to developing the 3D previews and physics engine, which is what makes this project special. But first, about drawing and exporting the pattern.
 
-### 2. 모자 치수 계산
+## Calculating the Hat Dimensions
 
-버킷햇은 두 개의 잘린 원뿔(트렁케이티드 콘)로 구성됩니다. 하나는 머리 부분(헤드 밴드)이고, 다른 하나는 챙(브림)입니다. 헤드 부분에는 꼭대기 덮개(크라운)가 포함됩니다. 보다 세밀한 조정을 위해, 사용자가 머리를 위에서 내려다본 형태의 이심률(헤드 비율)을 조정할 수 있도록 했습니다.
+A bucket hat consists of two truncated cones. One being the head(band) and the other the brim. The head piece has a top cap which is the crown. For a more detailed and control over the shape of the hat, I also added head ratio parameters to adjust the eccentricity of the ellipse of the head viewed from the top.
 
-입력값을 기반으로 다양한 변수를 계산하여 3D 모델과 패턴을 생성합니다.
+Various variables needed to generate the 3d model and sewing pattern were calculated with the parameter inputs.
 
-### 입력값 및 계산 변수
+### Input Parameters and Calculated Variables
 
-- 머리 둘레
-- 머리 높이
-- 머리 비율
-- 챙 너비
-- 챙 각도
-- 머리 원뿔 반경 (Major Axis, Minor Axis)
-- 머리 원뿔 높이
-- 머리 원뿔 전개 각도
-- 챙 원뿔 반경 (Major Axis, Minor Axis)
-- 챙 원뿔 높이
-- 챙 원뿔 전개 각도
-- 챙 바닥 오프셋
-- 크라운 반경 (Major Axis, Minor Axis)
+- Head Circumference
+- Head Height
+- Head Ratio
+- Brim Width
+- Brim Angle
+- Head Cone Radius A, B
+- Head Cone Height
+- Head cone development sector angle
+- Brim Cone Radius A, B
+- Brim cone height
+- brim cone development sector angle
+- Brim Base Offset
+- Crown Radius A, B
 
-### 3. 패턴 생성 및 전개도 계산
+To calculate the major(a) and minor(b) axes of an ellipse given with the circumference and a, b ratio, I needed the formula for calculating the circumference of an ellipse first. I initially thought it would be simple and be some altered form of 2πr, but upon searching for it online, it turns out there was no exact formula for it. I came across an entire [Wiki Page](https://en.wikipedia.org/wiki/Perimeter_of_an_ellipse) and a fun [YouTube video](https://www.youtube.com/watch?v=5nW3nJhBHL0) about it, how an ellipse doesn’t have one. One of the most accurate approximations was done by a genius mathematician, [Srinivasa Ramanujan](https://en.wikipedia.org/wiki/Srinivasa_Ramanujan). And the formula looks like this.
 
-타원형 원뿔의 전개도를 계산하기 위해, 각도별로 변하는 경사 길이를 측정해야 합니다. 이를 위해 `2π/segments` 단위로 나누어 각도별 경사 길이를 계산한 후, 이를 반지름으로 하여 원형에 가까운 형태를 그립니다.
+<Katex
+  equation={
+    "P \\approx \\pi \\left( a + b \\right) \\left( 1 + \\frac{3h}{10 + \\sqrt{4 - 3h}} \\right)"
+  }
+/>
+<Katex equation={"h = \\frac{(a - b)^2}{(a + b)^2}"} />
+
+```js
+//  Ramanujan's second approximation
+function ellipseCircumference(a, b) {
+  const h = Math.pow(a - b, 2) / Math.pow(a + b, 2);
+  const p = Math.PI * (a + b) * (1 + (3 * h) / (10 + Math.sqrt(4 - 3 * h)));
+  return p;
+}
+```
+
+This approximation has an error of 0.000005%. Now that’s some black magic. However, because of the complexity of the equation, I couldn't easily invert the equation to get the axes. So, I chose to go with a simple iterative approach and compare it with Ramanujan’s approximation with a target tolerance.
+
+```js
+function findEllipseAxesForRatio(target, ratio, initialA = 75, tolerance = 1e-4) {
+  // Initialize axis 'a' with the smallest(baby) of head radiuses
+  let a = initialA;
+  let b = a * ratio;
+  let targetPerimeter = target;
+  let difference;
+
+  do {
+    // Update 'b' to maintain the given aspect ratio
+    b = a * ratio;
+
+    // Get an ellipse perimeter using with Ramanujan's formula
+    let perimeter = ellipseCircumference(a, b);
+
+    // Get the difference between the computed and target perimeter
+    difference = Math.abs(perimeter - targetPerimeter);
+
+    // Adjust 'a' based on the difference to converge towards the target perimeter
+    a += (targetPerimeter - perimeter) * 0.1;
+  } while (difference > tolerance); // Continue until the error is within the specified tolerance
+
+  // Return the computed major and minor axes
+  return { a, b };
+}
+```
+
+However, I came to another mathematical problem. To draw the development of an elliptical cone, I needed the angle of the development sector(pizza slice shape). With a circular cone, the sector angle would be `Φ=2πr/l`, but with an elliptical cone, the slant l would change at every angle of the sector. With no mathematical genius of my own, I just averaged the two angles calculated with the major and minor axes. The result is terrible at higher eccentricities but has an error between 5 ~ and 10mm in my application of bucket hats. I decided that the redundancy of fabrics and sewing wouldn't make it much of a problem.
+
+<img src="/bucket-hat/images/cone-development.png" />
+
+## Drawing the Development
+
+Drawing radial shapes is done by plotting points from a fixed center, using angles to determine their positions.
+
+```js
+function ellipse(a, b, segments = 128) {
+  // [{x,y},{x,y}...]
+  const coordinates = [];
+
+  for (let index = 0; index < segments; index++) {
+    const angle = (index / segments) * Math.PI * 2;
+    coordinates.push({
+      x: a * Math.cos(angle),
+      y: b * Math.sin(angle),
+    });
+  }
+
+  // push the first coordinate so that there is a line segement at the end
+  coordinates.push(coordinates[0]);
+
+  return coordinates;
+}
+```
+
+For an elliptical cone, the slant changes for every angle. So I calculated the slant in steps of `2π/segments` (segments would be how detailed the arc would be). Then, I draw a radial figure like the algorithm above except, instead of a radius, I use the calculated slant to be used as the distance from the center.
+
+```js
+function ellipticalConeDevelopmentArc(
+  a, // Major Axis A
+  b, // Minor Axix B
+  height, // Total Height of The Cone
+  developmentAngle, // Sector angle
+  segments = 128 // number of line segments
+) {
+  // [{x,y},{x,y}...]
+  const coordinates = [];
+
+  for (let index = 0; index < segments; index++) {
+    // increase step by 2π/segments * total sector angle
+    const ellipseAngleSegment = (index / segments) * 2 * Math.PI;
+    const developmentAngleSegment = (index / segments) * developmentAngle;
+    // calculate slant
+    const slant = Math.hypot(
+      height,
+      Math.hypot(a * Math.cos(ellipseAngleSegment), b * Math.sin(ellipseAngleSegment))
+    );
+    // A coodinate with a slant distance from center and step angle
+    coordinates.push({
+      slant: slant,
+      x: slant * Math.cos(developmentAngleSegment),
+      y: slant * Math.sin(developmentAngleSegment),
+    });
+  }
+
+  return coordinates;
+}
+```
+
+### Elliptical Cone Development
 
 <ConeDevelopment />
 
-### 4. PDF 내보내기
+## Exporting The Pattern as PDF
 
-jsPDF를 활용하여 동적으로 PDF를 생성하고, svg2pdf 플러그인을 사용하여 SVG 패턴을 삽입했습니다. 기존 PDF 파일을 수정하는 기능이 없어, 코드로 직접 모든 요소를 추가해야 했던 점이 아쉬웠습니다.
+jsPDF was a useful tool to generate dynamic PDF files. It supports texts, images, and SVGs with a plugin. One feature I wish it had was the ability to add elements to an existing PDF file. It would have been easier to make a template without having to add template elements one by one by code. It seemed like a difficult feature to implement because PDF being a _very_ old format with high complexity, there is no universal way to modify its content dynamically.
 
-## 3D 시뮬레이션
+![Example PDF Print](/bucket-hat/images/bucket-hat-print.jpg)
 
-물리 시뮬레이션을 통해 사용자는 모자의 형태와 착용감을 더 직관적으로 이해할 수 있습니다. 시뮬레이션이 완벽하지는 않지만, 생성된 모자가 실제로 머리에 어떻게 놓일지를 시각적으로 표현하는 데 큰 도움을 줍니다.
+## Making The Mesh
 
-시뮬레이션은 두 개의 월드(물리 세계, 그래픽 세계)로 구성됩니다. Three.js를 사용하여 3D 모델을 생성하고 렌더링하며, Cannon.js를 사용하여 물리적인 상호작용을 시뮬레이션합니다. 이렇게 하면 모자의 원단 특성과 움직임을 더 현실적으로 표현할 수 있습니다.
+Generating the 3D model was done by using the `LatheGeometry` of THREE.js. It takes a profile of the hat and revolves it around an axis and I scaled it in one direction so it matches the head ratio and becomes an elliptical shape.
+
+<Lathe />
+
+## Physics Simulation
+
+The physics simulations enhance the user's inherent comprehension of the hat's physical characteristics. Even though the simulation can be inaccurate, it provides a better understanding of how the hat will behave on top of a head.
+
+The simulation consists of two worlds: a physics world and a graphics world. The graphics world, powered by Three.js, handles rendering—generating the 3D model, setting up lights, cameras, shaders, and everything visual. The physics world is separate; it takes a copy of the 3D model’s data and runs its own simulation with gravity, mass, and other physical rules.
+
+In this simulation, the cloth is made of interconnected points (particles) copied from the 3D mesh’s vertices positions and are linked by constraints. These constraints control how much the fabric can stretch or bend, making the material feel realistic.
+
+There are many types of constraints provided by the physics engine Cannon-es. These are the constraints related to simulating a cloth
+
+1. **Distance constraint** - A constraint to keep two points at a fixed distance from each other. They ensure the cloth stays proportionally correct while allowing the material to bend and drape.
+2. **Lock constraint** - A constraint that removes all degrees of freedom. While a distance constraint keeps the proportions of the cloth, a lock constraint keeps the form of the cloth by adding forces to retain its original shape.
+3. **Spring** - A spring has both of the properties of distance and lock constraints by allowing it to move freely and also applying forces to keep its original shape. It is more realistic as it can simulate the elasticity of fabrics but is more computationally demanding because it requires more calculations.
+
+I used the first two constraints in this project.
+
+```js
+// Making a plane geometry and cannon.js particles with the vertex data
+
+// A plane geometry of 10 by 10 segments
+const geometry = new THREE.PlaneGeometry(1, 1, 10, 10);
+const vertexPositions = geometry.getAttribute("position");
+
+const world = new CANNON.World({ gravity: new CANNON.Vec3(0, -9.81, 0) });
+const particles = [];
+
+for (let i = 0; i < vertexPositions.count; i++) {
+  const x = vertexPositions.getX(i);
+  const y = vertexPositions.getY(i);
+  const z = vertexPositions.getZ(i);
+
+  const particleBody = new CANNON.Body({
+    mass: params.fabricWeight,
+    shape: new CANNON.Particle(),
+    position: new CANNON.Vec3(x, y, z),
+  });
+
+  particles.push(particleBody);
+  world.addBody(particleBody);
+}
+```
+
+This creates individual physics particles based on the mesh’s vertex positions. However, I needed a structured way to add constraints between adjacent particles.
+
+### Improving Readability with an Indexed Data Structure
+
+A simple approach would be to add constraints based on the segment numbers, but I wanted something more readable and a convenient way to handle exceptions. Instead of just storing particles in an array, I used an object with `x, y` indices as keys. This helped me visualize the data structure better and allowed for more flexibility when adding constraints.
+
+```js
+const xSegments = 10;
+const ySegments = 10;
+
+const geometry = new THREE.PlaneGeometry(1, 1, xSegments, ySegments);
+const vertexPositions = geometry.getAttribute("position");
+
+const world = new CANNON.World({ gravity: new CANNON.Vec3(0, -9.81, 0) });
+const particles = {};
+
+for (let x = 0; x <= xSegments; x++) {
+  for (let y = 0; y <= ySegments; y++) {
+    const key = `${x} ${y}`;
+    const vertexIndex = y + x * (ySegments + 1);
+
+    const xPos = vertexPositions.getX(vertexIndex);
+    const yPos = vertexPositions.getY(vertexIndex);
+    const zPos = vertexPositions.getZ(vertexIndex);
+
+    const particleBody = new CANNON.Body({
+      mass: params.fabricWeight,
+      shape: new CANNON.Particle(),
+      position: new CANNON.Vec3(xPos, yPos, zPos),
+    });
+
+    particles[key] = particleBody;
+    world.addBody(particleBody);
+  }
+}
+```
+
+Now, I could easily reference particles using their `x y` coordinates. This made it straightforward to add constraints between adjacent particles.
+
+### Connecting Particles with Constraints
+
+To simulate the structural integrity of the fabric, I connected particles with constraints. The logic is as follows:
+
+- Connect each particle to the one above it (vertical connection).
+- Connect each particle to the one on the left (horizontal connection).
+- If the particle is at the leftmost edge, connect it to the rightmost particle to simulate a seamless wrap (useful for cylindrical shapes like a hat brim).
+
+```js
+for (let x = xSegments; x >= 0; x--) {
+  for (let y = ySegments; y >= 0; y--) {
+    // Connect to the particle above
+    if (y - 1 >= 0) {
+      connect(particles[`${x} ${y}`], particles[`${x} ${y - 1}`], y);
+    }
+
+    // Connect to the particle on the left (or wrap around if at the edge)
+    if (x - 1 >= 0) {
+      connect(particles[`${x} ${y}`], particles[`${x - 1} ${y}`], y);
+    } else {
+      connect(particles[`${x} ${y}`], particles[`${xSegments} ${y}`], y);
+    }
+  }
+}
+```
+
+This approach not only makes the constraints more readable but also allows for special cases, such as wrapping around edges or excluding specific connections.
+
+## Final Thoughts
+
+This project started because I wanted a better way to see how a bucket hat would turn out before cutting fabric. Along the way, it became a mix of pattern generation, PDF generating, 3D visualization, and physics simulation.
+
+There’s still a lot I could improve—more shape options, better physics, maybe even different hat styles. But for now, it does what I initially envisioned.
